Home page URL change

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 {% extends 'layout.html' %}
 
 {% block body %}
-    Hello World!
+    <h2>This is the new home page (more to come!)</h2>
 {% endblock %}
