--- a/templates/user.html
+++ b/templates/user.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 
-{% block body %}{% endblock %}
+{% if user %}
+    <h1>Hello {{ user }}</h1>
+{% else %}
+    <h1>Please log in</h1>
+{% endif %}
 
 </body>
 </html>
