--- a/templates/shopping.html
+++ b/templates/shopping.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 
-{% block body %}{% endblock %}
+<ul>
+    {% for item in food %}
+        <li>{{ item }}</li>
+    {% endfor %}
+</ul>
 
 </body>
 </html>
